    command is supported before calling it.

  [ Guillem Jover ]
  * Add powerpcspe support to ostable and triplettable.
    Thanks to Sebastian Andrzej Siewior <sebastian@breakpoint.cc> and
    Kyle Moffett <Kyle.D.Moffett@boeing.com>. Closes: #568123, #575158
  * Fix dpkg --root by properly stripping again the root directory from the
    path of the maintainer script to execute. Closes: #580984

  [ Gerfried Fuchs ]
  * Fix syntax error in dpkg-name. Closes: #581315

 -- Raphaël Hertzog <hertzog@debian.org>  Fri, 23 Apr 2010 18:17:14 +0200

dpkg (1.15.7.1) unstable; urgency=low

  * Fix dpkg-source -b (without -i) for source packages 1.0. Closes: #578693
    It was erroneously ignoring all changes because the ignore regex was
    wrong (due to the change to ignore debian/source/local-options).
  * Add missing call to textdomain() in dpkg-mergechangelogs to make
    translations work.

 -- Raphaël Hertzog <hertzog@debian.org>  Thu, 22 Apr 2010 08:05:20 +0200

dpkg (1.15.7) unstable; urgency=low

  [ Raphaël Hertzog ]
  * Clarify the plan concerning dpkg-source, debian/source/format and
    the default source format in dpkg-source(1). Add a warning
    in dpkg-source to invite people to always create debian/source/format.
    We deprecate the fallback to "1.0" (it's there for backwards compatibility
    only) and debian/source/format is going to be mandatory at some point in
    the future. Closes: #553928
  * Add .gitattributes to list of files ignored by dpkg-source.
  * Document most common warnings and errors of dpkg-source in its manual
    page.
  * Let dpkg-source read options from debian/source/local-options as well but
    do not include that file in the generated source package.
  * Improve explanation of --all option in dpkg-parsechangelog(1). Thanks to
    Jari Aalto. Closes: #575706
  * Fix dpkg to not lose package metadata on filesystems where readdir()
    returns new files added after the opendir() call, btrfs in particular